Agregado de alt, max-width total, detalles fotos, textos, aplicación total del font

--- a/pages/lugares.html
+++ b/pages/lugares.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
+    <meta name="description"
+        content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,117 +54,117 @@
     <main>
         <h2 class="titulo__pagina">Lugares para comer vegano</h2>
         <h3 class="titulo-zona">CABA</h3>
-        <section class="zona">   
+        <section class="zona">
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/ladov.jpg" alt="">
+                <img class="zona__img" src="../imagenes/ladov.jpg" alt="Foto de restaurant Lado V">
                 <h4 class="zona__titulo">Lado V</h4>
                 <p class="zona__descripcion">Honduras 4969</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/ainara.jpg" alt="">
+                <img class="zona__img" src="../imagenes/ainara.jpg" alt="Foto de heladería Ainara">
                 <h4 class="zona__titulo">Ainara</h4>
                 <p class="zona__descripcion">Charcas 4987</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/gordovegano.jpg" alt="">
+                <img class="zona__img" src="../imagenes/gordovegano.jpg" alt="Foto de restaurant Gordo Vegano">
                 <h4 class="zona__titulo">Gordo Vegano</h4>
                 <p class="zona__descripcion">Etcheverria 3078</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/koi.jpg" alt="">
+                <img class="zona__img" src="../imagenes/koi.jpg" alt="Foto de restaurant Koi Dumplings">
                 <h4 class="zona__titulo">Koi Dumplings</h4>
                 <p class="zona__descripcion">Lavalleja 1387</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/Letitv.jpg" alt="">
+                <img class="zona__img" src="../imagenes/Letitv.jpg" alt="Foto de restaurant Letit V">
                 <h4 class="zona__titulo">Letit V</h4>
                 <p class="zona__descripcion">Costa Rica 5865</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/spikalion.jpg" alt="">
+                <img class="zona__img" src="../imagenes/spikalion.jpg" alt="Foto de local Spikalion">
                 <h4 class="zona__titulo">Spikalion</h4>
                 <p class="zona__descripcion">Rio Bamba 485</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/veganfox.jpg" alt="">
+                <img class="zona__img" src="../imagenes/veganfox.jpg" alt="Foto de restaurant Vegan Fox">
                 <h4 class="zona__titulo">Vegan Fox</h4>
                 <p class="zona__descripcion">Gorriti 5213</p>
             </article>
         </section>
 
         <h3 class="titulo-zona">Neuquén</h3>
-        <section class="zona">   
+        <section class="zona">
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/cuchi.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/cuchi.jpeg" alt="Foto de restaurant Cuchí">
                 <h4 class="zona__titulo">Cuchi</h4>
                 <p class="zona__descripcion">Roca 89</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/oliver.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/oliver.jpeg" alt="Foto de restaurant Oliver">
                 <h4 class="zona__titulo">Oliver</h4>
                 <p class="zona__descripcion">Belgrano 96</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/growler.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/growler.jpeg" alt="Foto de restaurant Growler">
                 <h4 class="zona__titulo">Growler</h4>
                 <p class="zona__descripcion">Elordi 81</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/oss.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/oss.jpeg" alt="Foto de restaurant OSS">
                 <h4 class="zona__titulo">OSS</h4>
                 <p class="zona__descripcion">Luis Beltran 1041</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/franzypeponne.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/franzypeponne.jpeg" alt="Foto de restaurant Franz y Peppone">
                 <h4 class="zona__titulo">Franz y Peppone</h4>
                 <p class="zona__descripcion">Brown 434</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/lamargarita.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/lamargarita.jpeg" alt="Foto de panadería La Margarita">
                 <h4 class="zona__titulo">La Margarita</h4>
                 <p class="zona__descripcion">Santa Fe 427</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/panypunto.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/panypunto.jpeg" alt="Foto de panadería Pan y Punto">
                 <h4 class="zona__titulo">Pan y punto</h4>
                 <p class="zona__descripcion">Bueno Aires 326</p>
             </article>
         </section>
 
         <h3 class="titulo-zona">Cordoba</h3>
-        <section class="zona">   
+        <section class="zona">
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/elefantebengal.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/elefantebengal.jpeg" alt="Foto de restaurant Elefante Bengal">
                 <h4 class="zona__titulo">Elefante Bengal</h4>
                 <p class="zona__descripcion">Fructuoso Rivera 224</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/servario.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/servario.jpeg" alt="Foto de restaurant Servario">
                 <h4 class="zona__titulo">Servario</h4>
                 <p class="zona__descripcion">Echenique 2066</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/bullanga.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/bullanga.jpeg" alt="Foto de restaurant Bullanga">
                 <h4 class="zona__titulo">Bullanga</h4>
                 <p class="zona__descripcion">Caseros 308</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/happinessclub.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/happinessclub.jpeg" alt="Foto de restaurant Happiness Club">
                 <h4 class="zona__titulo">Happiness Club</h4>
                 <p class="zona__descripcion">Independencia 849</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/chillifood.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/chillifood.jpeg" alt="Foto de restaurant Chilli Food">
                 <h4 class="zona__titulo">Chilli Food</h4>
                 <p class="zona__descripcion">Fructioso Rivera 273</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/deaveras.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/deaveras.jpeg" alt="Foto de restaurant De a Veras">
                 <h4 class="zona__titulo">De a Deveras</h4>
                 <p class="zona__descripcion">Obispo Salguero 599</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/otifocacceria.jpeg" alt="">
+                <img class="zona__img" src="../imagenes/otifocacceria.jpeg" alt="Foto de restaurant Oti Focaccería">
                 <h4 class="zona__titulo">Oti Focacceria</h4>
                 <p class="zona__descripcion">Bolivia 281</p>
             </article>
