--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
+    <meta name="description"
+        content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +21,7 @@
         <nav class="navbar navbar-expand-md">
             <div class="container">
                 <a class="navbar-brand" href="../index.html"><img class="rounded-4" src="../imagenes/fondo.jpeg"
-                        alt="Logo"></a>
+                        alt="Logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -57,19 +58,26 @@
             <h3 class="subtitulo__pagina">Ultimas noticias</h3>
             <div class="noticias">
                 <div class="noticias__tarjeta">
-                    <img class="noticias__img" src="../imagenes/noticia.jpg" alt="Billie Eilish lanza zapatillas">
+                    <img class="noticias__img" src="../imagenes/noticia.jpg" alt="Billie Eilish con las zapatillas">
                     <h4>Billie Eilish lanza unas zapatillas con Nike </h4>
-                    <p>La cantante firmó un contrato con la marca Nike para lanzar unas zapatillas inspiradas en ella. Son las Air Jordan 1 KO edición limitada, un calzado con superficie plana, caña media-alta y un color verde fosforescente similar a los tonos utilizados por la cantante en la época de su disco “When we all fall asleep, where do we go?”.</p>
+                    <p>La cantante firmó un contrato con la marca Nike para lanzar unas zapatillas inspiradas en ella.
+                        Son las Air Jordan 1 KO edición limitada, un calzado con superficie plana, caña media-alta y un
+                        color verde fosforescente similar a los tonos utilizados por la cantante en la época de su disco
+                        “When we all fall asleep, where do we go?”.</p>
                 </div>
                 <div class="noticias__tarjeta">
-                    <img class="noticias__img" src="../imagenes/kitkat.jpg" alt="Última noticia 2">
+                    <img class="noticias__img" src="../imagenes/kitkat.jpg" alt="Foto de chocolate KitKat vegano">
                     <h4>Nestlé lanza barra de KitKat vegana</h4>
-                    <p>El anuncio de la llegada de una nuevo chocolate vegano por parte de Nestlése hizo eco durante 2021, pero ahora, finalmente se ha hecho realidad. Ya puedes comprar los KitKat V, la opción vegana de las míticas barritas de chocolate. </p>
+                    <p>El anuncio de la llegada de una nuevo chocolate vegano por parte de Nestlése hizo eco durante
+                        2021, pero ahora, finalmente se ha hecho realidad. Ya puedes comprar los KitKat V, la opción
+                        vegana de las míticas barritas de chocolate. </p>
                 </div>
                 <div class="noticias__tarjeta">
-                    <img class="noticias__img" src="../imagenes/chia.jpg" alt="Última noticia 3">
+                    <img class="noticias__img" src="../imagenes/chia.jpg" alt="Foto de comida de restaurant Chía">
                     <h4>Restaurante vegano del Cusco es elegido como el mejor del mundo por TripAdvisor</h4>
-                    <p>Chia Vegan Kitchen, un restaurante vegano ubicado en Cusco, ha sido catalogado como el mejor del mundo por los premios ‘Travellers Choice Best of the Best’ de TripAdvisor, el sitio estadounidense que proporciona reseñas de contenido relacionado con viaje.</p>
+                    <p>Chia Vegan Kitchen, un restaurante vegano ubicado en Cusco, ha sido catalogado como el mejor del
+                        mundo por los premios ‘Travellers Choice Best of the Best’ de TripAdvisor, el sitio
+                        estadounidense que proporciona reseñas de contenido relacionado con viaje.</p>
                 </div>
             </div>
         </section>
@@ -79,16 +87,28 @@
             <h3 class="subtitulo__pagina">Argentina</h3>
             <div class="noticias2">
                 <div class="noticias2__tarjeta">
-                    <h4 class="noticias2__titulo">A los 19 años creo el primer alfajor vegano del pais y hoy vende 1 millon por año</h4>
-                    <p class="noticias2__texto">Lucia Mariño que se frustraba por no encontrar productos veganos y creó en su casa, una pyme que hasta llegó a Miami. Se trata de los alfajores de Un Rincon Vegano, nombre que inventó por esa denodada busqueda de contar con algun lugarcito en algún anaquel.</p>
+                    <h4 class="noticias2__titulo">A los 19 años creo el primer alfajor vegano del pais y hoy vende 1
+                        millon por año</h4>
+                    <p class="noticias2__texto">Lucia Mariño que se frustraba por no encontrar productos veganos y creó
+                        en su casa, una pyme que hasta llegó a Miami. Se trata de los alfajores de Un Rincon Vegano,
+                        nombre que inventó por esa denodada busqueda de contar con algun lugarcito en algún anaquel.</p>
                 </div>
                 <div class="noticias2__tarjeta">
-                    <h4 class="noticias2__titulo">El bife vegano que gana cada vez mas lugar en los restaurantes porteños</h4>
-                    <p class="noticias2__texto">En el 2023 fue el año en que la melena de leon desembarcó fuerte en los restaurantes. En "Marti Barra", el restaurante vegetariano de Martitegui, es un plato que está entre los mas pedidos. Fue el punto cúlmine del menú con el que el chef presento a fin de diciembre el libro de su "Proyecto Tierras", y no hubo un invitado que no quedará fascinado con ese bife que no era bife.</p>
+                    <h4 class="noticias2__titulo">El bife vegano que gana cada vez mas lugar en los restaurantes
+                        porteños</h4>
+                    <p class="noticias2__texto">En el 2023 fue el año en que la melena de leon desembarcó fuerte en los
+                        restaurantes. En "Marti Barra", el restaurante vegetariano de Martitegui, es un plato que está
+                        entre los mas pedidos. Fue el punto cúlmine del menú con el que el chef presento a fin de
+                        diciembre el libro de su "Proyecto Tierras", y no hubo un invitado que no quedará fascinado con
+                        ese bife que no era bife.</p>
                 </div>
                 <div class="noticias2__tarjeta">
-                    <h4 class="noticias2__titulo">Como es la "Ley Lipovetzky" que promueve la comida vegana en restaurantes</h4>
-                    <p class="noticias2__texto">La ley provincial de alimentación vegetariana y vegana, busca promover el derecho a la igualdad de todos los consumidores para una libre elección en sus comidas. Con esta ley se lorgrá dar mayor libertad a nuestros consumidores, sobre todo a los jovenes, y por ende también conseguimos defender a nuestros animales.</p>
+                    <h4 class="noticias2__titulo">Como es la "Ley Lipovetzky" que promueve la comida vegana en
+                        restaurantes</h4>
+                    <p class="noticias2__texto">La ley provincial de alimentación vegetariana y vegana, busca promover
+                        el derecho a la igualdad de todos los consumidores para una libre elección en sus comidas. Con
+                        esta ley se lorgrá dar mayor libertad a nuestros consumidores, sobre todo a los jovenes, y por
+                        ende también conseguimos defender a nuestros animales.</p>
                 </div>
             </div>
         </section>
@@ -100,15 +120,23 @@
             <div class="noticias2">
                 <div class="noticias2__tarjeta">
                     <h4 class="noticias2__titulo">Subway saca un nuevo Teriyaki Veg</h4>
-                    <p class="noticias2__texto">Subway Mexico sacó una nueva opcion vegana en este 2024, con proteína 100% vegetal y con el riquisimo sabor de siempre</p>
+                    <p class="noticias2__texto">Subway Mexico sacó una nueva opcion vegana en este 2024, con proteína
+                        100% vegetal y con el riquisimo sabor de siempre</p>
                 </div>
                 <div class="noticias2__tarjeta">
                     <h4 class="noticias2__titulo">Veganuary</h4>
-                    <p class="noticias2__texto">"La revolución comienza en enero. Unete a los vegetales. Prueba el veganismo este enero." Estos son los títulos de los anuncios de la orgnización originaria de reino unido, que invita a la gente a probar el veganismo y reparten información de forma gratuita para hacer mas facil la transición a este tipo de alimentación. En la información se encuentran recetas, información, lista de compras y mucho más.</p>
+                    <p class="noticias2__texto">"La revolución comienza en enero. Unete a los vegetales. Prueba el
+                        veganismo este enero." Estos son los títulos de los anuncios de la orgnización originaria de
+                        reino unido, que invita a la gente a probar el veganismo y reparten información de forma
+                        gratuita para hacer mas facil la transición a este tipo de alimentación. En la información se
+                        encuentran recetas, información, lista de compras y mucho más.</p>
                 </div>
                 <div class="noticias2__tarjeta">
                     <h4 class="noticias2__titulo">Holanda le dice adios a las publicidades de Carnes</h4>
-                    <p class="noticias2__texto">Holanda se enfocara en frenar el cambio climático y aplicará una medida especial sobre la carne. Las empresas ya no tendrán un espacio en la calle. La medida afectara a toda la carne procedente de la ganadería intensiva, esto incluye la publicidad de las cadenas de comidas rapidas.</p>
+                    <p class="noticias2__texto">Holanda se enfocara en frenar el cambio climático y aplicará una medida
+                        especial sobre la carne. Las empresas ya no tendrán un espacio en la calle. La medida afectara a
+                        toda la carne procedente de la ganadería intensiva, esto incluye la publicidad de las cadenas de
+                        comidas rapidas.</p>
                 </div>
             </div>
 
