--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
+    <meta name="description"
+        content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +24,7 @@
         <nav class="navbar navbar-expand-xl">
             <div class="container">
                 <a class="navbar-brand" href="./index.html"><img class="rounded-4" src="./imagenes/fondo.jpeg"
-                        alt="Logo"></a>
+                        alt="Logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -56,9 +57,9 @@
 
     <main>
 
-        <div class="contenedor__inicio">
-            <div class="inicio">
-                <div class="inicio__img"><img src=" ./imagenes/vaca-tomando-leche.jpg" alt="Ternero tomando leche">
+        <div class="inicio">
+            <div class="inicio__card">
+                <div class="inicio__img"><img src=" ./imagenes/vacatomandoleche.jpg" alt="Ternero tomando leche">
                 </div>
                 <div>
                     <h3>Que ofrece Pagina Vegana?</h3>
@@ -70,16 +71,18 @@
                 </div>
             </div>
 
-            <div class="inicio">
-                <div class="inicio__img"><img src="./imagenes/oreo.jpg" alt="Oreos clásicas"></div>
+            <div class="inicio__card">
+                <div class="inicio__img"><img src="./imagenes/oreo.jpg" alt="Galletitas oreos clásicas"></div>
                 <div>
                     <h3 class="inicio_titulo">Oreos veganas</h3>
-                    <p class="inicio_texto">Las oreos clásicas son veganas y todos los veganos son felices por eso. Es de los productos que los especistas, es decir los no veganos, no creen que esta galletita sea 100% de origen vegetal.
+                    <p class="inicio_texto">Las oreos clásicas son veganas y todos los veganos son felices por eso. Es
+                        de los productos que los especistas, es decir los no veganos, no creen que esta galletita sea
+                        100% de origen vegetal.
                     </p>
                 </div>
             </div>
-            <div class="inicio">
-                <div class="inicio__img"><img src="./imagenes/ladov.jpg" alt="Foto del restaurant"></div>
+            <div class="inicio__card">
+                <div class="inicio__img"><img src="./imagenes/ladov.jpg" alt="Foto del restaurant Lado V"></div>
                 <div>
                     <h3 class="inicio_titulo">Restaurant recomedado</h3>
                     <p class="inicio_texto">Este restaurant está ubicado en la ciudad de Buenos Aires, en el barrio de
@@ -89,8 +92,8 @@
                     </p>
                 </div>
             </div>
-            <div class="inicio">
-                <div class="inicio__img"><img src="./imagenes/kitkat.jpg" alt="noticia vegana"></div>
+            <div class="inicio__card">
+                <div class="inicio__img"><img src="./imagenes/kitkat.jpg" alt="KitKat Vegano"></div>
                 <div>
                     <h3 class="inicio_titulo">Nuevo KitKat vegano</h3>
                     <p class="inicio_texto">La marca Nestle sacó un nuevo chocolate KitKat, versión vegana.
@@ -145,7 +148,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
