--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-md">
             <div class="container">
                 <a class="navbar-brand" href="../index.html"><img class="rounded-4" src="../imagenes/fondo.jpeg"
-                        alt="Logo"></a>
+                        alt="Logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -55,7 +55,9 @@
         <h2 class="titulo__pagina">Información vegana</h2>
         <section class="informacion1">
             <h2 class="informacion1__titulo">Qué es ser vegano?</h2>
-            <p class="informacion1__texto">El veganismo es una filosofía y forma de vida que busca excluir, en la medida de lo posible y practicable, todas las formas de explotación y crueldad hacia los animales, incluyendo su uso para la comida, ropa, o cualquier otro propósito.</p>
+            <p class="informacion1__texto">El veganismo es una filosofía y forma de vida que busca excluir, en la medida
+                de lo posible y practicable, todas las formas de explotación y crueldad hacia los animales, incluyendo
+                su uso para la comida, ropa, o cualquier otro propósito.</p>
         </section>
 
         <h3 class="subtitulo__pagina">Algunas preguntas frecuentes</h3>
@@ -76,7 +78,10 @@
             </article>
             <article class="informacion__card">
                 <h4 class="informacion__titulo">Y ahora? De donde saco el calcio?</h4>
-                <p class="informacion__texto">Cuando hablamos de calcio es común pensar en la leche de vaca. Sin embargo es un mineral que se encuentra en el mundo vegetal inclusive superando al aporte de la leche, dentro de los alimentos más ricos en este mineral podemos encontrar las almendras, semillas de sésamo, brocoli, garbanzos, como así también en bebidas vegetales y tofu que son enriquecidos.</p>
+                <p class="informacion__texto">Cuando hablamos de calcio es común pensar en la leche de vaca. Sin embargo
+                    es un mineral que se encuentra en el mundo vegetal inclusive superando al aporte de la leche, dentro
+                    de los alimentos más ricos en este mineral podemos encontrar las almendras, semillas de sésamo,
+                    brocoli, garbanzos, como así también en bebidas vegetales y tofu que son enriquecidos.</p>
             </article>
             <article class="informacion__card">
                 <h4 class="informacion__titulo">Dieta vegana = 0 colesterol</h4>
@@ -90,68 +95,68 @@
         <h3 class="subtitulo__pagina">Creadores de recetas veganas</h3>
         <section class="creadores">
             <article class="creadores__card">
-                <img class="creadores__img" src="../imagenes/soyvelen.jpeg" alt="">
+                <img class="creadores__img" src="../imagenes/soyvelen.jpeg" alt="Foto de Soyvelen">
                 <h4 class="creadores__titulo">Soyvelen</h4>
                 <a class="creadores__link" href="https://www.instagram.com/soyvelen/?hl=es">@Soyvelen</a>
             </article>
             <article class="creadores__card">
-                <img class="creadores__img" src="../imagenes/nutriloca.jpeg" alt="">
+                <img class="creadores__img" src="../imagenes/nutriloca.jpeg" alt="Foto de Nutriloca">
                 <h4 class="creadores__titulo">Nutriloca</h4>
                 <a class="creadores__link" href="https://www.instagram.com/nutriloca/?hl=es">@Nutriloca</a>
             </article>
             <article class="creadores__card">
-                <img class="creadores__img" src="../imagenes/midiariovegan.jpeg" alt="">
+                <img class="creadores__img" src="../imagenes/midiariovegan.jpeg" alt="Foto de mi diario vegan">
                 <h4 class="creadores__titulo">Milagros</h4>
                 <a class="creadores__link" href="https://www.instagram.com/midiariovegan/?hl=es-la">@midiariovegan</a>
             </article>
             <article class="creadores__card">
-                <img class="creadores__img" src="../imagenes/veganaarg.jpeg" alt="">
+                <img class="creadores__img" src="../imagenes/veganaarg.jpeg" alt="Foto de vegana arg">
                 <h4 class="creadores__titulo">Veganaarg</h4>
                 <a class="creadores__link" href="https://www.instagram.com/vegana.arg/?hl=es">@vegana.arg</a>
             </article>
         </section>
 
         <h3 class="subtitulo__pagina">Activistas veganos</h3>
-        <section class="activistas"> 
+        <section class="activistas">
             <article class="activistas__card">
-                <img class="activistas__img" src="../imagenes/soledadbarruti.jpeg" alt="">
+                <img class="activistas__img" src="../imagenes/soledadbarruti.jpeg" alt="Foto de Soledad Barruti">
                 <h3 class="activistas__titulo">Soledad Barruti</h3>
-                <h4 class="activistas__link">@solesbarruti</h4>
+                <a class="activistas__link" href="https://www.instagram.com/solesbarruti/?hl=es">@solesbarruti</a>
             </article>
             <article class="activistas__card">
-                <img class="activistas__img" src="../imagenes/nutriloca.jpeg" alt="">
-                <h3 class="activistas__titulo">Rocío Hernandez</h3>
-                <h4 class="activistas__link">@nutriloca</h4>
+                <img class="activistas__img" src="../imagenes/voicot.jpeg" alt="Foto de perfil de Voicot">
+                <h3 class="activistas__titulo">Voicot</h3>
+                <a class="activistas__link" href="https://www.instagram.com/voicot/?hl=es">@nutriloca</a>
             </article>
             <article class="activistas__card">
-                <!-- <img class="activistas__img" src="../imagenes/fernandopieroni.jpeg" alt=""> -->
-                <img class="activistas__img" src="../imagenes/nutriloca.jpeg" alt="">
+                <img class="activistas__img" src="../imagenes/ferpieroni.jpeg" alt="Foto de Fernando Pieroni">
                 <h3 class="activistas__titulo">Fernando Pieroni</h3>
-                <h4 class="activistas__link">@ferpieroni</h4>
+                <a class="activistas__link" href="https://www.instagram.com/fer_pieroni/?hl=es">@ferpieroni</a>
             </article>
             <article class="activistas__card">
-                <img class="activistas__img" src="../imagenes/evelynre.jpeg" alt="">
+                <img class="activistas__img" src="../imagenes/evelynre.jpeg" alt="Foto de doctora Evelyn Re">
                 <h3 class="activistas__titulo">Dra. Evelyn Re</h3>
-                <h4 class="activistas__link">@dra.evelynre</h4>
+                <a class="activistas__link" href="https://www.instagram.com/dra.evelynre/">@dra.evelynre</a>
             </article>
         </section>
 
         <h3 class="subtitulo__pagina">Documentales y videos recomendados</h3>
         <section class="documentales">
             <article class="documentales__card">
-                <img class="documentales__img" src="../imagenes/whatthehealth.jpeg" alt="">
+                <img class="documentales__img" src="../imagenes/whatthehealth.jpeg"
+                    alt="Foto de documental What the Health">
                 <h3 class="documentales__titulo">What the health</h3>
             </article>
             <article class="documentales__card">
-                <img class="documentales__img" src="../imagenes/cowspiracy.jpeg" alt="">
+                <img class="documentales__img" src="../imagenes/cowspiracy.jpeg" alt="Foto de documental Cowspiracy">
                 <h3 class="documentales__titulo">Cowspiracy</h3>
             </article>
             <article class="documentales__card">
-                <img class="documentales__img" src="../imagenes/earthlings.jpeg" alt="">
+                <img class="documentales__img" src="../imagenes/earthlings.jpeg" alt="Foto de documental Earthlings">
                 <h3 class="documentales__titulo">Earthlings</h3>
             </article>
             <article class="documentales__card">
-                <img class="documentales__img" src="../imagenes/dominion.jpeg" alt="">
+                <img class="documentales__img" src="../imagenes/dominion.jpeg" alt="Foto de documental Dominion">
                 <h3 class="documentales__titulo">Dominion</h3>
             </article>
         </section>
