--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
+    <meta name="description"
+        content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +21,7 @@
         <nav class="navbar navbar-expand-md">
             <div class="container">
                 <a class="navbar-brand" href="../index.html"><img class="rounded-4" src="../imagenes/fondo.jpeg"
-                        alt="Logo"></a>
+                        alt="Logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -190,28 +191,24 @@
             <h2 class="subtitulo__pagina">Calzado y carteras</h2>
             <div class="producto">
                 <article class="producto__card">
-                    <img src="../imagenes/imagen.png" alt="Gorrión carteras">
+                    <img class="producto__img" src="../imagenes/gorrion.jpeg" alt="Logo de Gorrión carteras">
                     <h3 class="producto__titulo">Gorrión <br> Carteras</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/imagen.png" alt="Indica Shoes calzado">
+                    <img class="producto__img" src="../imagenes/indicashoes.jpeg" alt="Loog de Indica Shoes calzado">
                     <h3 class="producto__titulo">Indica Shoes<br> Calzado </h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/imagen.png" alt="Santa Clara carteras">
+                    <img class="producto__img" src="../imagenes/santaclara.jpeg" alt="Logo de Santa Clara carteras">
                     <h3 class="producto__titulo">Santa Clara <br> Carteras</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/imagen.png" alt="Maitina calzado">
+                    <img class="producto__img" src="../imagenes/maitina.jpeg" alt="Logo de Maitina calzado">
                     <h3 class="producto__titulo">Maitina <br> Calzado</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/imagen.png" alt="Maitina calzado">
-                    <h3 class="producto__titulo">Maitina <br> Calzado</h3>
-                </article>
-                <article class="producto__card">
-                    <img src="../imagenes/imagen.png" alt="Maitina calzado">
-                    <h3 class="producto__titulo">Maitina <br> Calzado</h3>
+                    <img class="producto__img" src="../imagenes/cretashoes.jpeg" alt="Logo de Creta Shoes">
+                    <h3 class="producto__titulo">Creta Shoes <br> Calzado</h3>
                 </article>
             </div>
         </section>
