--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="shortcut icon" href="./imagenes/blopy.jpeg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +27,7 @@
     <header id="header">
         <nav class="navbar navbar-expand-xl">
             <div class="container">
-                <a class="navbar-brand" href="./index.html"><img class="rounded-4" src="./imagenes/fondo.jpeg"
+                <a class="navbar-brand" href="./index.html"><img class="rounded-4 logo" src="./imagenes/blopy.jpeg"
                         alt="Logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -57,47 +61,55 @@
 
     <main>
 
+        <section class="portada portadainicio">
+            <h1 class="portada__titulo">Blopy | Información Vegana</h1>
+        </section>
+
         <div class="inicio">
             <div class="inicio__card">
                 <div class="inicio__img"><img src=" ./imagenes/vacatomandoleche.jpg" alt="Ternero tomando leche">
                 </div>
                 <div>
-                    <h3>Que ofrece Pagina Vegana?</h3>
+                    <h2>Qué ofrece Blopy?</h2>
                     <p>Este sitio web va a ser el gran aliado de la persona vegana o de familia y amigos que quieran
                         entender este hermoso mundo de empatía. Aca vas a poder encontrar información sobre el
                         veganismo, noticias, productos veganos de todo tipo y lugares donde encontrar comida rica para
                         comer.
                     </p>
+                    <a class="btn" href="./pages/informacion.html">Ver mas información</a>
                 </div>
             </div>
 
             <div class="inicio__card">
                 <div class="inicio__img"><img src="./imagenes/oreo.jpg" alt="Galletitas oreos clásicas"></div>
                 <div>
-                    <h3 class="inicio_titulo">Oreos veganas</h3>
+                    <h2 class="inicio_titulo">Oreos veganas</h2>
                     <p class="inicio_texto">Las oreos clásicas son veganas y todos los veganos son felices por eso. Es
                         de los productos que los especistas, es decir los no veganos, no creen que esta galletita sea
                         100% de origen vegetal.
                     </p>
+                    <a class="btn" href="./pages/productos.html">Ver mas productos</a>
                 </div>
             </div>
             <div class="inicio__card">
                 <div class="inicio__img"><img src="./imagenes/ladov.jpg" alt="Foto del restaurant Lado V"></div>
                 <div>
-                    <h3 class="inicio_titulo">Restaurant recomedado</h3>
+                    <h2 class="inicio_titulo">Restaurant recomedado</h2>
                     <p class="inicio_texto">Este restaurant está ubicado en la ciudad de Buenos Aires, en el barrio de
                         Palermo, calle Honduras 4969. Se caracteriza por ser un lugar muy instagrameable, con hermosos
                         lugares para sacarse altas fotos. La comida es estilo "Street Food" y tiene una barra de tragos
                         espectacular.
                     </p>
+                    <a class="btn" href="./pages/lugares.html">Ver mas lugares</a>
                 </div>
             </div>
             <div class="inicio__card">
                 <div class="inicio__img"><img src="./imagenes/kitkat.jpg" alt="KitKat Vegano"></div>
                 <div>
-                    <h3 class="inicio_titulo">Nuevo KitKat vegano</h3>
+                    <h2 class="inicio_titulo">Nuevo KitKat vegano</h2>
                     <p class="inicio_texto">La marca Nestle sacó un nuevo chocolate KitKat, versión vegana.
                     </p>
+                    <a class="btn" href="./pages/noticias.html">Ver mas noticias</a>
                 </div>
             </div>
         </div>
@@ -121,9 +133,9 @@
             <div class="footer__redes">
                 <h4>Redes sociales</h4>
                 <ul>
-                    <li class="footer__link">Facebook</li>
-                    <li class="footer__link">Instagram</li>
-                    <li class="footer__link">Tik tok</li>
+                    <li class="footer__link"><i class="fa-brands fa-facebook"></i> Facebook </li>
+                    <li class="footer__link"><i class="fa-brands fa-instagram"></i> Instagram</li>
+                    <li class="footer__link"><i class="fa-brands fa-tiktok"></i> Tik tok</li>
                 </ul>
             </div>
 
@@ -132,11 +144,11 @@
                     <h4>Dejanos un mensaje</h4>
 
                     <div><label for="nombre-usuario">Nombre y apellido</label></div>
-                    <div><input type="text" id="nombre-usuario"></div>
+                    <div><input class="form" type="text" id="nombre-usuario"></div>
                     <div><label for="email-usuario">Email</label></div>
-                    <div><input type="email" id="email-usuario"></div>
+                    <div><input class="form" type="email" id="email-usuario"></div>
                     <div><label for="mensaje-usuario">Mensaje</label></div>
-                    <div><textarea name="" id="mensaje-usuario" cols="30" rows="5"></textarea></div>
+                    <div><textarea class="form" name="" id="mensaje-usuario" cols="30" rows="5"></textarea></div>
                     <div><input class="btn" type="submit" value="Enviar">
                         <input class="btn" type="reset" value="Borrar">
                     </div>
