--- a/pages/lugares.html
+++ b/pages/lugares.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        content="Descubrí grandiosos lugares de comida vegana con deliciosos platos a base de plantas en toda la Argentina">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="shortcut icon" href="../imagenes/blopy.jpeg">   
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +24,7 @@
     <header id="header">
         <nav class="navbar navbar-expand-md">
             <div class="container">
-                <a class="navbar-brand" href="../index.html"><img class="rounded-4" src="../imagenes/fondo.jpeg"
+                <a class="navbar-brand" href="../index.html"><img class="rounded-4 logo" src="../imagenes/blopy.jpeg"
                         alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -52,120 +56,124 @@
 
 
     <main>
-        <h2 class="titulo__pagina">Lugares para comer vegano</h2>
-        <h3 class="titulo-zona">CABA</h3>
+
+        <section class="portada portadalugares">
+            <h1 class="portada__titulo">Lugares para comer vegano</h1>
+        </section>
+
+        <h2 class="titulo-zona">CABA</h2>
         <section class="zona">
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/ladov.jpg" alt="Foto de restaurant Lado V">
-                <h4 class="zona__titulo">Lado V</h4>
+                <h3 class="zona__titulo">Lado V</h3>
                 <p class="zona__descripcion">Honduras 4969</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/ainara.jpg" alt="Foto de heladería Ainara">
-                <h4 class="zona__titulo">Ainara</h4>
+                <h3 class="zona__titulo">Ainara</h3>
                 <p class="zona__descripcion">Charcas 4987</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/gordovegano.jpg" alt="Foto de restaurant Gordo Vegano">
-                <h4 class="zona__titulo">Gordo Vegano</h4>
+                <h3 class="zona__titulo">Gordo Vegano</h3>
                 <p class="zona__descripcion">Etcheverria 3078</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/koi.jpg" alt="Foto de restaurant Koi Dumplings">
-                <h4 class="zona__titulo">Koi Dumplings</h4>
+                <h3 class="zona__titulo">Koi Dumplings</h3>
                 <p class="zona__descripcion">Lavalleja 1387</p>
             </article>
             <article class="zona__card">
-                <img class="zona__img" src="../imagenes/Letitv.jpg" alt="Foto de restaurant Letit V">
-                <h4 class="zona__titulo">Letit V</h4>
+                <img class="zona__img" src="../imagenes/letitv.jpg" alt="Foto de restaurant Letit V">
+                <h3 class="zona__titulo">Letit V</h3>
                 <p class="zona__descripcion">Costa Rica 5865</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/spikalion.jpg" alt="Foto de local Spikalion">
-                <h4 class="zona__titulo">Spikalion</h4>
+                <h3 class="zona__titulo">Spikalion</h3>
                 <p class="zona__descripcion">Rio Bamba 485</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/veganfox.jpg" alt="Foto de restaurant Vegan Fox">
-                <h4 class="zona__titulo">Vegan Fox</h4>
+                <h3 class="zona__titulo">Vegan Fox</h3>
                 <p class="zona__descripcion">Gorriti 5213</p>
             </article>
         </section>
 
-        <h3 class="titulo-zona">Neuquén</h3>
+        <h2 class="titulo-zona">Neuquén</h2>
         <section class="zona">
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/cuchi.jpeg" alt="Foto de restaurant Cuchí">
-                <h4 class="zona__titulo">Cuchi</h4>
+                <h3 class="zona__titulo">Cuchi</h3>
                 <p class="zona__descripcion">Roca 89</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/oliver.jpeg" alt="Foto de restaurant Oliver">
-                <h4 class="zona__titulo">Oliver</h4>
+                <h3 class="zona__titulo">Oliver</h3>
                 <p class="zona__descripcion">Belgrano 96</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/growler.jpeg" alt="Foto de restaurant Growler">
-                <h4 class="zona__titulo">Growler</h4>
+                <h3 class="zona__titulo">Growler</h3>
                 <p class="zona__descripcion">Elordi 81</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/oss.jpeg" alt="Foto de restaurant OSS">
-                <h4 class="zona__titulo">OSS</h4>
+                <h3 class="zona__titulo">OSS</h3>
                 <p class="zona__descripcion">Luis Beltran 1041</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/franzypeponne.jpeg" alt="Foto de restaurant Franz y Peppone">
-                <h4 class="zona__titulo">Franz y Peppone</h4>
+                <h3 class="zona__titulo">Franz y Peppone</h3>
                 <p class="zona__descripcion">Brown 434</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/lamargarita.jpeg" alt="Foto de panadería La Margarita">
-                <h4 class="zona__titulo">La Margarita</h4>
+                <h3 class="zona__titulo">La Margarita</h3>
                 <p class="zona__descripcion">Santa Fe 427</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/panypunto.jpeg" alt="Foto de panadería Pan y Punto">
-                <h4 class="zona__titulo">Pan y punto</h4>
+                <h3 class="zona__titulo">Pan y punto</h3>
                 <p class="zona__descripcion">Bueno Aires 326</p>
             </article>
         </section>
 
-        <h3 class="titulo-zona">Cordoba</h3>
+        <h2 class="titulo-zona">Cordoba</h2>
         <section class="zona">
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/elefantebengal.jpeg" alt="Foto de restaurant Elefante Bengal">
-                <h4 class="zona__titulo">Elefante Bengal</h4>
+                <h3 class="zona__titulo">Elefante Bengal</h3>
                 <p class="zona__descripcion">Fructuoso Rivera 224</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/servario.jpeg" alt="Foto de restaurant Servario">
-                <h4 class="zona__titulo">Servario</h4>
+                <h3 class="zona__titulo">Servario</h3>
                 <p class="zona__descripcion">Echenique 2066</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/bullanga.jpeg" alt="Foto de restaurant Bullanga">
-                <h4 class="zona__titulo">Bullanga</h4>
+                <h3 class="zona__titulo">Bullanga</h3>
                 <p class="zona__descripcion">Caseros 308</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/happinessclub.jpeg" alt="Foto de restaurant Happiness Club">
-                <h4 class="zona__titulo">Happiness Club</h4>
+                <h3 class="zona__titulo">Happiness Club</h3>
                 <p class="zona__descripcion">Independencia 849</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/chillifood.jpeg" alt="Foto de restaurant Chilli Food">
-                <h4 class="zona__titulo">Chilli Food</h4>
+                <h3 class="zona__titulo">Chilli Food</h3>
                 <p class="zona__descripcion">Fructioso Rivera 273</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/deaveras.jpeg" alt="Foto de restaurant De a Veras">
-                <h4 class="zona__titulo">De a Deveras</h4>
+                <h3 class="zona__titulo">De a Deveras</h3>
                 <p class="zona__descripcion">Obispo Salguero 599</p>
             </article>
             <article class="zona__card">
                 <img class="zona__img" src="../imagenes/otifocacceria.jpeg" alt="Foto de restaurant Oti Focaccería">
-                <h4 class="zona__titulo">Oti Focacceria</h4>
+                <h3 class="zona__titulo">Oti Focacceria</h3>
                 <p class="zona__descripcion">Bolivia 281</p>
             </article>
         </section>
@@ -189,9 +197,9 @@
             <div class="footer__redes">
                 <h4>Redes sociales</h4>
                 <ul>
-                    <li class="footer__link">Facebook</li>
-                    <li class="footer__link">Instagram</li>
-                    <li class="footer__link">Tik tok</li>
+                    <li class="footer__link"><i class="fa-brands fa-facebook"></i> Facebook </li>
+                    <li class="footer__link"><i class="fa-brands fa-instagram"></i> Instagram</li>
+                    <li class="footer__link"><i class="fa-brands fa-tiktok"></i> Tik tok</li>
                 </ul>
             </div>
 
@@ -200,11 +208,11 @@
                     <h4>Dejanos un mensaje</h4>
 
                     <div><label for="nombre-usuario">Nombre y apellido</label></div>
-                    <div><input type="text" id="nombre-usuario"></div>
+                    <div><input class="form" type="text" id="nombre-usuario"></div>
                     <div><label for="email-usuario">Email</label></div>
-                    <div><input type="email" id="email-usuario"></div>
+                    <div><input class="form" type="email" id="email-usuario"></div>
                     <div><label for="mensaje-usuario">Mensaje</label></div>
-                    <div><textarea name="" id="mensaje-usuario" cols="30" rows="5"></textarea></div>
+                    <div><textarea class="form" name="" id="mensaje-usuario" cols="30" rows="5"></textarea></div>
                     <div><input class="btn" type="submit" value="Enviar">
                         <input class="btn" type="reset" value="Borrar">
                     </div>
