--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        content="Enterate de las últimas noticias del mundo vegano, con lanzamientos de marcas, acitivismo y mucho mas.">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="shortcut icon" href="../imagenes/blopy.jpeg">   
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +24,7 @@
     <header id="header">
         <nav class="navbar navbar-expand-md">
             <div class="container">
-                <a class="navbar-brand" href="../index.html"><img class="rounded-4" src="../imagenes/fondo.jpeg"
+                <a class="navbar-brand" href="../index.html"><img class="rounded-4 logo" src="../imagenes/blopy.jpeg"
                         alt="Logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -52,29 +56,31 @@
 
 
     <main>
+        <section class="portada portadanoticias">
+            <h1 class="portada__titulo">Noticias sobre el veganismo</h1>
+        </section>
 
-        <h2 class="titulo__pagina">Noticias sobre el veganismo</h2>
         <section>
-            <h3 class="subtitulo__pagina">Ultimas noticias</h3>
+            <h2 class="subtitulo__pagina">Ultimas noticias</h2>
             <div class="noticias">
                 <div class="noticias__tarjeta">
                     <img class="noticias__img" src="../imagenes/noticia.jpg" alt="Billie Eilish con las zapatillas">
-                    <h4>Billie Eilish lanza unas zapatillas con Nike </h4>
-                    <p>La cantante firmó un contrato con la marca Nike para lanzar unas zapatillas inspiradas en ella.
+                    <h3>Billie Eilish lanza unas zapatillas con Nike </h3>
+                    <p class="noticias__parrafo">La cantante firmó un contrato con la marca Nike para lanzar unas zapatillas inspiradas en ella.
                         Son las Air Jordan 1 KO edición limitada, un calzado con superficie plana, caña media-alta y un
                         color verde fosforescente similar a los tonos utilizados por la cantante en la época de su disco
                         “When we all fall asleep, where do we go?”.</p>
                 </div>
                 <div class="noticias__tarjeta">
-                    <img class="noticias__img" src="../imagenes/kitkat.jpg" alt="Foto de chocolate KitKat vegano">
-                    <h4>Nestlé lanza barra de KitKat vegana</h4>
+                    <img class="noticias__img noticias__img2" src="../imagenes/kitkat.jpg" alt="Foto de chocolate KitKat vegano">
+                    <h3>Nestlé lanza barra de KitKat vegana</h3>
                     <p>El anuncio de la llegada de una nuevo chocolate vegano por parte de Nestlése hizo eco durante
                         2021, pero ahora, finalmente se ha hecho realidad. Ya puedes comprar los KitKat V, la opción
                         vegana de las míticas barritas de chocolate. </p>
                 </div>
                 <div class="noticias__tarjeta">
-                    <img class="noticias__img" src="../imagenes/chia.jpg" alt="Foto de comida de restaurant Chía">
-                    <h4>Restaurante vegano del Cusco es elegido como el mejor del mundo por TripAdvisor</h4>
+                    <img class="noticias__img noticias__img2" src="../imagenes/chia.jpg" alt="Foto de comida de restaurant Chía">
+                    <h3>Restaurante vegano del Cusco es elegido como el mejor del mundo por TripAdvisor</h3>
                     <p>Chia Vegan Kitchen, un restaurante vegano ubicado en Cusco, ha sido catalogado como el mejor del
                         mundo por los premios ‘Travellers Choice Best of the Best’ de TripAdvisor, el sitio
                         estadounidense que proporciona reseñas de contenido relacionado con viaje.</p>
@@ -84,18 +90,18 @@
 
 
         <section>
-            <h3 class="subtitulo__pagina">Argentina</h3>
+            <h2 class="subtitulo__pagina">Argentina</h2>
             <div class="noticias2">
                 <div class="noticias2__tarjeta">
-                    <h4 class="noticias2__titulo">A los 19 años creo el primer alfajor vegano del pais y hoy vende 1
-                        millon por año</h4>
-                    <p class="noticias2__texto">Lucia Mariño que se frustraba por no encontrar productos veganos y creó
+                    <h3 class="noticias2__titulo">A los 19 años creo el primer alfajor vegano del pais y hoy vende 1
+                        millon por año</h3>
+                    <p class="noticias2__texto">Lucia Mariño que se frustraba por no encontrar productos veganos, creó
                         en su casa, una pyme que hasta llegó a Miami. Se trata de los alfajores de Un Rincon Vegano,
                         nombre que inventó por esa denodada busqueda de contar con algun lugarcito en algún anaquel.</p>
                 </div>
                 <div class="noticias2__tarjeta">
-                    <h4 class="noticias2__titulo">El bife vegano que gana cada vez mas lugar en los restaurantes
-                        porteños</h4>
+                    <h3 class="noticias2__titulo">El bife vegano que gana cada vez mas lugar en los restaurantes
+                        porteños</h3>
                     <p class="noticias2__texto">En el 2023 fue el año en que la melena de leon desembarcó fuerte en los
                         restaurantes. En "Marti Barra", el restaurante vegetariano de Martitegui, es un plato que está
                         entre los mas pedidos. Fue el punto cúlmine del menú con el que el chef presento a fin de
@@ -103,8 +109,8 @@
                         ese bife que no era bife.</p>
                 </div>
                 <div class="noticias2__tarjeta">
-                    <h4 class="noticias2__titulo">Como es la "Ley Lipovetzky" que promueve la comida vegana en
-                        restaurantes</h4>
+                    <h3 class="noticias2__titulo">Como es la "Ley Lipovetzky" que promueve la comida vegana en
+                        restaurantes</h3>
                     <p class="noticias2__texto">La ley provincial de alimentación vegetariana y vegana, busca promover
                         el derecho a la igualdad de todos los consumidores para una libre elección en sus comidas. Con
                         esta ley se lorgrá dar mayor libertad a nuestros consumidores, sobre todo a los jovenes, y por
@@ -116,15 +122,15 @@
 
 
         <section>
-            <h3 class="subtitulo__pagina">Del mundo</h3>
+            <h2 class="subtitulo__pagina">Del mundo</h2>
             <div class="noticias2">
                 <div class="noticias2__tarjeta">
-                    <h4 class="noticias2__titulo">Subway saca un nuevo Teriyaki Veg</h4>
+                    <h3 class="noticias2__titulo">Subway saca un nuevo Teriyaki Veg</h3>
                     <p class="noticias2__texto">Subway Mexico sacó una nueva opcion vegana en este 2024, con proteína
                         100% vegetal y con el riquisimo sabor de siempre</p>
                 </div>
                 <div class="noticias2__tarjeta">
-                    <h4 class="noticias2__titulo">Veganuary</h4>
+                    <h3 class="noticias2__titulo">Veganuary</h3>
                     <p class="noticias2__texto">"La revolución comienza en enero. Unete a los vegetales. Prueba el
                         veganismo este enero." Estos son los títulos de los anuncios de la orgnización originaria de
                         reino unido, que invita a la gente a probar el veganismo y reparten información de forma
@@ -132,7 +138,7 @@
                         encuentran recetas, información, lista de compras y mucho más.</p>
                 </div>
                 <div class="noticias2__tarjeta">
-                    <h4 class="noticias2__titulo">Holanda le dice adios a las publicidades de Carnes</h4>
+                    <h3 class="noticias2__titulo">Holanda le dice adios a las publicidades de Carnes</h3>
                     <p class="noticias2__texto">Holanda se enfocara en frenar el cambio climático y aplicará una medida
                         especial sobre la carne. Las empresas ya no tendrán un espacio en la calle. La medida afectara a
                         toda la carne procedente de la ganadería intensiva, esto incluye la publicidad de las cadenas de
@@ -159,9 +165,9 @@
             <div class="footer__redes">
                 <h4>Redes sociales</h4>
                 <ul>
-                    <li class="footer__link">Facebook</li>
-                    <li class="footer__link">Instagram</li>
-                    <li class="footer__link">Tik tok</li>
+                    <li class="footer__link"><i class="fa-brands fa-facebook"></i> Facebook </li>
+                    <li class="footer__link"><i class="fa-brands fa-instagram"></i> Instagram</li>
+                    <li class="footer__link"><i class="fa-brands fa-tiktok"></i> Tik tok</li>
                 </ul>
             </div>
 
@@ -170,11 +176,11 @@
                     <h4>Dejanos un mensaje</h4>
 
                     <div><label for="nombre-usuario">Nombre y apellido</label></div>
-                    <div><input type="text" id="nombre-usuario"></div>
+                    <div><input class="form" type="text" id="nombre-usuario"></div>
                     <div><label for="email-usuario">Email</label></div>
-                    <div><input type="email" id="email-usuario"></div>
+                    <div><input class="form" type="email" id="email-usuario"></div>
                     <div><label for="mensaje-usuario">Mensaje</label></div>
-                    <div><textarea name="" id="mensaje-usuario" cols="30" rows="5"></textarea></div>
+                    <div><textarea class="form" name="" id="mensaje-usuario" cols="30" rows="5"></textarea></div>
                     <div><input class="btn" type="submit" value="Enviar">
                         <input class="btn" type="reset" value="Borrar">
                     </div>
