--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
+        content="Enterate de los productos que son apto vegano, tales como alimentos, maquillaje, skin care, calzados y carteras">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="../imagenes/blopy.jpeg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +24,7 @@
     <header id="header">
         <nav class="navbar navbar-expand-md">
             <div class="container">
-                <a class="navbar-brand" href="../index.html"><img class="rounded-4" src="../imagenes/fondo.jpeg"
+                <a class="navbar-brand" href="../index.html"><img class="rounded-4 logo" src="../imagenes/blopy.jpeg"
                         alt="Logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
@@ -53,29 +57,26 @@
 
 
     <main>
-        <h2 class="titulo__pagina">Productos veganos</h2>
 
+        <section class="portada portadaproductos">
+            <h1 class="portada__titulo">Productos Veganos</h1>
+        </section>
 
         <div class="formulario__productos">
             <form action="">
-                <div><label for="buscar-producto">Buscar producto</label></div>
-                <div><input type="search" name="" id="buscar-producto"></div>
-                <select name="" id="">
-                    <option value="">Todos los productos</option>
-                    <option value="">Alimentos</option>
-                    <option value="">Cosmética</option>
-                    <option value="">Maquillaje</option>
-                    <option value="">Calzado y carteras</option>
-                </select>
-                <br>
+                <div><input class="form" type="search" name="" id="buscar-producto" placeholder="Buscar producto">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+                <div><select class="form" name="" id="">
+                        <option value="">Todos los productos</option>
+                        <option value="">Alimentos</option>
+                        <option value="">Cosmética</option>
+                        <option value="">Maquillaje</option>
+                        <option value="">Calzado y carteras</option>
+                    </select>
+                </div>
             </form>
         </div>
-
-
-
-
-        <!-- Carousel -->
-
 
         <section>
             <h2 class="subtitulo__pagina">Alimentos</h2>
@@ -231,9 +232,9 @@
             <div class="footer__redes">
                 <h4>Redes sociales</h4>
                 <ul>
-                    <li class="footer__link">Facebook</li>
-                    <li class="footer__link">Instagram</li>
-                    <li class="footer__link">Tik tok</li>
+                    <li class="footer__link"><i class="fa-brands fa-facebook"></i> Facebook </li>
+                    <li class="footer__link"><i class="fa-brands fa-instagram"></i> Instagram</li>
+                    <li class="footer__link"><i class="fa-brands fa-tiktok"></i> Tik tok</li>
                 </ul>
             </div>
 
@@ -242,11 +243,11 @@
                     <h4>Dejanos un mensaje</h4>
 
                     <div><label for="nombre-usuario">Nombre y apellido</label></div>
-                    <div><input type="text" id="nombre-usuario"></div>
+                    <div><input class="form" type="text" id="nombre-usuario"></div>
                     <div><label for="email-usuario">Email</label></div>
-                    <div><input type="email" id="email-usuario"></div>
+                    <div><input class="form" type="email" id="email-usuario"></div>
                     <div><label for="mensaje-usuario">Mensaje</label></div>
-                    <div><textarea name="" id="mensaje-usuario" cols="30" rows="5"></textarea></div>
+                    <div><textarea class="form" name="" id="mensaje-usuario" cols="30" rows="5"></textarea></div>
                     <div><input class="btn" type="submit" value="Enviar">
                         <input class="btn" type="reset" value="Borrar">
                     </div>
