Arreglo de imagenes y edición de nesting en header

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -21,11 +21,11 @@
 
 <body>
 
-    <header id="header">
+    <header class="header" id="header">
         <nav class="navbar navbar-expand-md">
             <div class="container">
-                <a class="navbar-brand" href="../index.html"><img class="rounded-4 logo" src="../imagenes/blopy.jpeg"
-                        alt="Logo de la página"></a>
+                <a class="navbar-brand" href="../index.html"><img class="rounded-4 header__img"
+                        src="../imagenes/blopy.jpeg" alt="Logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -34,19 +34,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Inicio</a>
+                            <a class="nav-link header__link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./informacion.html">Información</a>
+                            <a class="nav-link header__link" href="./informacion.html">Información</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./productos.html">Productos</a>
+                            <a class="nav-link header__link" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./lugares.html">Lugares</a>
+                            <a class="nav-link header__link" href="./lugares.html">Lugares</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./noticias.html">Noticias</a>
+                            <a class="nav-link header__link" href="./noticias.html">Noticias</a>
                         </li>
                     </ul>
                 </div>
