--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Explorá el mundo del veganismo en nuestro sitio web dedicado a la vida vegana. Descubre información esencial, productos deliciosos y saludables, encuentra lugares veganos para disfrutar de deliciosas comidas y mantente actualizado con las últimas noticias sobre el veganismo.">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="shortcut icon" href="./imagenes/blopy.jpeg">
+    <link rel="shortcut icon" href="./imagenes/blopy.jpeg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,14 +21,12 @@
     <title>Pagina vegana | Donde encontrarás toda la información para ser vegano</title>
 </head>
 
-
-
 <body>
-    <header id="header">
+    <header class="header" id="header">
         <nav class="navbar navbar-expand-xl">
             <div class="container">
-                <a class="navbar-brand" href="./index.html"><img class="rounded-4 logo" src="./imagenes/blopy.jpeg"
-                        alt="Logo de la página"></a>
+                <a class="navbar-brand" href="./index.html"><img class="rounded-4 header__img"
+                        src="./imagenes/blopy.jpeg" alt="Logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -37,19 +35,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="./index.html">Inicio</a>
+                            <a class="nav-link header__link" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/informacion.html">Información</a>
+                            <a class="nav-link header__link" href="./pages/informacion.html">Información</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/productos.html">Productos</a>
+                            <a class="nav-link header__link" href="./pages/productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/lugares.html">Lugares</a>
+                            <a class="nav-link header__link" href="./pages/lugares.html">Lugares</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/noticias.html">Noticias</a>
+                            <a class="nav-link header__link" href="./pages/noticias.html">Noticias</a>
                         </li>
                     </ul>
                 </div>
@@ -72,7 +70,7 @@
                 <div>
                     <h2>Qué ofrece Blopy?</h2>
                     <p>Este sitio web va a ser el gran aliado de la persona vegana o de familia y amigos que quieran
-                        entender este hermoso mundo de empatía. Aca vas a poder encontrar información sobre el
+                        entender este hermoso mundo de empatía. Acá vas a poder encontrar información sobre el
                         veganismo, noticias, productos veganos de todo tipo y lugares donde encontrar comida rica para
                         comer.
                     </p>
