--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Encontrá información sobre las preguntas más frecuentes relacionadas al mundo del veganismo. Qué es es veganismo y que hay que tener en cuenta a la hora de seguir esta filosofía de vida y por consecuencia la dieta a base de plantas.">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="shortcut icon" href="../imagenes/blopy.jpeg">   
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="shortcut icon" href="../imagenes/blopy.jpeg">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,11 +21,11 @@
 </head>
 
 <body>
-    <header id="header">
+    <header class="header" id="header">
         <nav class="navbar navbar-expand-md">
             <div class="container">
-                <a class="navbar-brand" href="../index.html"><img class="rounded-4 logo" src="../imagenes/blopy.jpeg"
-                        alt="Logo de la página"></a>
+                <a class="navbar-brand" href="../index.html"><img class="rounded-4 header__img"
+                        src="../imagenes/blopy.jpeg" alt="Logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -34,19 +34,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Inicio</a>
+                            <a class="nav-link header__link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./informacion.html">Información</a>
+                            <a class="nav-link header__link" href="./informacion.html">Información</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./productos.html">Productos</a>
+                            <a class="nav-link header__link" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./lugares.html">Lugares</a>
+                            <a class="nav-link header__link" href="./lugares.html">Lugares</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./noticias.html">Noticias</a>
+                            <a class="nav-link header__link" href="./noticias.html">Noticias</a>
                         </li>
                     </ul>
                 </div>
