--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Enterate de las últimas noticias del mundo vegano, con lanzamientos de marcas, acitivismo y mucho mas.">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="shortcut icon" href="../imagenes/blopy.jpeg">   
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link rel="shortcut icon" href="../imagenes/blopy.jpeg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,11 +21,11 @@
 
 <body>
 
-    <header id="header">
+    <header class="header" id="header">
         <nav class="navbar navbar-expand-md">
             <div class="container">
-                <a class="navbar-brand" href="../index.html"><img class="rounded-4 logo" src="../imagenes/blopy.jpeg"
-                        alt="Logo de la página"></a>
+                <a class="navbar-brand" href="../index.html"><img class="rounded-4 header__img"
+                        src="../imagenes/blopy.jpeg" alt="Logo de la página"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -34,19 +34,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Inicio</a>
+                            <a class="nav-link header__link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./informacion.html">Información</a>
+                            <a class="nav-link header__link" href="./informacion.html">Información</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./productos.html">Productos</a>
+                            <a class="nav-link header__link" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./lugares.html">Lugares</a>
+                            <a class="nav-link header__link" href="./lugares.html">Lugares</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./noticias.html">Noticias</a>
+                            <a class="nav-link header__link" href="./noticias.html">Noticias</a>
                         </li>
                     </ul>
                 </div>
@@ -66,20 +66,23 @@
                 <div class="noticias__tarjeta">
                     <img class="noticias__img" src="../imagenes/noticia.jpg" alt="Billie Eilish con las zapatillas">
                     <h3>Billie Eilish lanza unas zapatillas con Nike </h3>
-                    <p class="noticias__parrafo">La cantante firmó un contrato con la marca Nike para lanzar unas zapatillas inspiradas en ella.
+                    <p class="noticias__parrafo">La cantante firmó un contrato con la marca Nike para lanzar unas
+                        zapatillas inspiradas en ella.
                         Son las Air Jordan 1 KO edición limitada, un calzado con superficie plana, caña media-alta y un
                         color verde fosforescente similar a los tonos utilizados por la cantante en la época de su disco
                         “When we all fall asleep, where do we go?”.</p>
                 </div>
                 <div class="noticias__tarjeta">
-                    <img class="noticias__img noticias__img2" src="../imagenes/kitkat.jpg" alt="Foto de chocolate KitKat vegano">
+                    <img class="noticias__img noticias__img2" src="../imagenes/kitkat.jpg"
+                        alt="Foto de chocolate KitKat vegano">
                     <h3>Nestlé lanza barra de KitKat vegana</h3>
                     <p>El anuncio de la llegada de una nuevo chocolate vegano por parte de Nestlése hizo eco durante
                         2021, pero ahora, finalmente se ha hecho realidad. Ya puedes comprar los KitKat V, la opción
                         vegana de las míticas barritas de chocolate. </p>
                 </div>
                 <div class="noticias__tarjeta">
-                    <img class="noticias__img noticias__img2" src="../imagenes/chia.jpg" alt="Foto de comida de restaurant Chía">
+                    <img class="noticias__img noticias__img2" src="../imagenes/chia.jpg"
+                        alt="Foto de comida de restaurant Chía">
                     <h3>Restaurante vegano del Cusco es elegido como el mejor del mundo por TripAdvisor</h3>
                     <p>Chia Vegan Kitchen, un restaurante vegano ubicado en Cusco, ha sido catalogado como el mejor del
                         mundo por los premios ‘Travellers Choice Best of the Best’ de TripAdvisor, el sitio
