Más imágenes de productos y sombras en tarjeta de información

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -98,16 +98,16 @@
                     <h3 class="producto__titulo">Rapiditas</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/oreo.jpg" alt="Oreos clásicas">
-                    <h3 class="producto__titulo">Oreos clásicas</h3>
+                    <img src="../imagenes/notchickenrellena.jpg" alt="Not Chicken Rellena">
+                    <h3 class="producto__titulo">Not Chicken Rellena</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/veggiesnacks.jpeg" alt="Veggie Snack Granix">
-                    <h3 class="producto__titulo">Veggie Snacks <br> Granix </h3>
+                    <img src="../imagenes/aguilabrownie.jpg" alt="Aguila Brownie">
+                    <h3 class="producto__titulo">Aguila Brownie</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/pepastrio.jpeg" alt="Pepas vegetal Trio">
-                    <h3 class="producto__titulo">Pepas vegetal <br> Trio </h3>
+                    <img src="../imagenes/alfajorhavanna.jpg" alt="Alfajor Havanna">
+                    <h3 class="producto__titulo">Alfajor Havanna </h3>
                 </article>
             </div>
         </section>
@@ -132,20 +132,20 @@
                     <h3 class="producto__titulo">Crema todo día <br> Natura</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/serumacf.jpeg" alt="Serum">
-                    <h3 class="producto__titulo">Serum ACF</h3>
+                    <img src="../imagenes/shampoofructis.webp" alt="Shampoo Fructis">
+                    <h3 class="producto__titulo">Shampoo Fructis</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/aguamicelargarnier.jpeg" alt="Agua micelar Garnier">
-                    <h3 class="producto__titulo">Agua micelar <br> Garnier</h3>
+                    <img src="../imagenes/mascarillanutrisse.jpg" alt="Mascarilla Nutrisse">
+                    <h3 class="producto__titulo">Mascarilla Nutrisse</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/protectorsolarvillenueve.jpeg" alt="Protector solar Villanueve">
-                    <h3 class="producto__titulo">Protector solar <br> Villanueve</h3>
+                    <img src="../imagenes/shampoobiferdil.jpg" alt="Shampoo Biferdil">
+                    <h3 class="producto__titulo">Shampoo Biferdil</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/cremanatura.jpeg" alt="Crema todo día Natura">
-                    <h3 class="producto__titulo">Crema todo día <br> Natura</h3>
+                    <img src="../imagenes/fotoprotectoracf.jpg" alt="Fotoprotector ACF">
+                    <h3 class="producto__titulo">Fotoprotector ACF</h3>
                 </article>
             </div>
         </section>
@@ -170,20 +170,20 @@
                     <h3 class="producto__titulo">Esmalte <br> Kiki Pronails</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/labialtodomoda.jpeg" alt="Labial Todo Moda">
-                    <h3 class="producto__titulo">Labial <br> Todo Moda</h3>
+                    <img src="../imagenes/basekindandfree.webp" alt="Base Kind and Free">
+                    <h3 class="producto__titulo">Base Kind and Free</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/correctorrimmel.jpeg" alt="Corrector Rimmel">
-                    <h3 class="producto__titulo">Corrector <br> Rimmel </h3>
+                    <img src="../imagenes/basemaxfactor.webp" alt="Base Max Factor">
+                    <h3 class="producto__titulo">Base Max Factor</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/delineadornatura.jpeg" alt="Delineador Natura">
-                    <h3 class="producto__titulo">Delineador <br> Natura</h3>
+                    <img src="../imagenes/labialnaturauna.jpg" alt="Labial Natura Una">
+                    <h3 class="producto__titulo">Labial Natura Una</h3>
                 </article>
                 <article class="producto__card">
-                    <img src="../imagenes/kikipronails.jpeg" alt="Esmalte Kiki Pronails">
-                    <h3 class="producto__titulo">Esmalte <br> Kiki Pronails</h3>
+                    <img src="../imagenes/paletaurbandecay.jpg" alt="Paleta Urban Decay">
+                    <h3 class="producto__titulo">Paleta Urban Decay</h3>
                 </article>
             </div>
         </section>
